--- a/web/css/header.css
+++ b/web/css/header.css
@@ -19,6 +19,8 @@ body {
     padding: 5px;
 }
 
+
+
 /*
 headeer top
 */
@@ -161,7 +163,7 @@ li {
 }
 
 .mx-background-top-linear {
-    background: -webkit-linear-gradient(45deg, #54d400 48%, #1b1e21 48%);
-    background: -webkit-linear-gradient(left, #54d400 48%, #1b1e21 48%);
-    background: linear-gradient(45deg, #54d400 48%, #1b1e21 48%);
+    background: -webkit-linear-gradient(45deg, #007b5e 48%, #1b1e21 48%);
+    background: -webkit-linear-gradient(left, #007b5e 48%, #1b1e21 48%);
+    background: linear-gradient(45deg, #007b5e 48%, #1b1e21 48%);
 }
