--- a/web/css/search.css
+++ b/web/css/search.css
@@ -24,7 +24,7 @@ body {
 
 button.btn.btn-hide {
     height: inherit;
-    background-color: #ff935d;
+    background-color: #007b5e;
     color: #fff;
     font-size: 0.82rem;
     padding-left: 40px;
@@ -278,7 +278,7 @@ label {
 }
 
 .card:hover {
-    box-shadow: 2px 2px 15px #fd9a6ce5;
+    box-shadow: 2px 2px 15px #007b5e;
     transform: scale(1.02)
 }
 
